as done as it gets. still some alignment issues and bullets don't show

--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,24 @@ nav ul li {
   font-family: 55px;
   color: black;
 }
+div.h_line{
+  width: 100%;
+  height: 8px;
+  background: grey;
+  margin-top: 20px;
+}
+
+div.h_line2{
+  width: 100%;
+  height: 1px;
+  background: grey;
+  margin-top: 20px;
+}
 .tagline{
-  font-family: uni-sans;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 10px;
+  margin-right: 200px;
+  margin-top: 2px;
 }
 body{
   font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
@@ -26,18 +41,27 @@ body{
 header{
   align-content: center;
 }
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 60px;
+  color: black;
+  margin:5px, 30px, 5px, 30px;
+}
 h2{
   font-size: 20px;
   margin-bottom: 20px;
 }
+.print{
+  margin: 0px;
+}
 main{
-  width: 960px;
+  width: 860px;
 }
 main img {
-  margin:30px;
+  margin:10px, 30px, 20px, 80px;
 }
 main ul li {
-  display: inline-block;
+  display: inline;
   margin: 30px, 30px, 30px, 0px;
 }
 main ul li:last-child {
@@ -61,6 +85,7 @@ main p {
 .recipecard {
   position: relative;
   text-align: center;
+  margin-bottom: 50px;
 }
 div.left li {
   color: black;
@@ -69,6 +94,7 @@ div.left li {
   position: relative;
   text-align: left;
   list-style-type: square;
+  list-style-position: inside;
 }
 .left {
   position: absolute;
@@ -80,9 +106,14 @@ div.left li {
 }
 div.left ul{
   list-style-type: square;
+  line-height: 1.5rem;
+  list-style-position: inside;
 }
 div.right ul{
   list-style-type: square;
+  list-style-position: inside;
+  line-height: 1.5rem;
+  list-style-position: inside;
 }
 div.right li {
   color: black;
@@ -91,6 +122,8 @@ div.right li {
   position: relative;
   text-align: left;
   list-style-type: square;
+  margin-left: 400px;
+  list-style-position: inside;
 }
 .right {
   position: absolute;
@@ -100,7 +133,12 @@ div.right li {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
 }
-
+#author{
+  display: inline-block;
+  margin: 30px, 30px, 30px, 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+}
 
 button {
   background: black;
